SDI-4: 🎨 Use Stream.toList() instead (#1153)
* SDI-4: 🎨 Use Stream.toList() instead

* SDI-4: 🎨 Not for these two - Stream.toList() doesn't compile

* SDI-4: 🎨 Fix sorting on now immutable lists